crates/test-ui/ui/extern_class_root.stderr
error[E0277]: the trait bound `MyObject: ClassType` is not satisfied
 --> ui/extern_class_root.rs
  |
  | / extern_class!(
  | |     #[unsafe(super(MyObject))]
  | |     #[thread_kind = AnyThread]
  | |     pub struct MyRootClass;
  | | );
  | |_^ unsatisfied trait bound
  |
help: the trait `ClassType` is not implemented for `MyObject`
 --> ui/extern_class_root.rs
  |
  | struct MyObject(AnyObject);
  | ^^^^^^^^^^^^^^^
help: the following other types implement trait `ClassType`
 --> ui/extern_class_root.rs
  |
  | / extern_class!(
  | |     #[unsafe(super(MyObject))]
  | |     #[thread_kind = AnyThread]
  | |     pub struct MyRootClass;
  | | );
  | |_^ `MyRootClass`
  |
 ::: $WORKSPACE/crates/objc2/src/runtime/nsobject.rs
  |
  |   unsafe impl ClassType for NSObject {
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `NSObject`
  |
 ::: $WORKSPACE/crates/objc2/src/runtime/nsproxy.rs
  |
  |   unsafe impl ClassType for NSProxy {
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `__NSProxy`
note: required by a bound in `objc2::__macros::ValidThreadKind::check`
 --> $WORKSPACE/crates/objc2/src/__macros/extern_class/checks.rs
  |
  |     Self::Super: ClassType,
  |                  ^^^^^^^^^ required by this bound in `ValidThreadKind::check`
...
  |     fn check() {}
  |        ----- required by a bound in this associated function
  = note: this error originates in the macro `$crate::__extern_class_inner` which comes from the expansion of the macro `extern_class` (in Nightly builds, run with -Z macro-backtrace for more info)
